--- a/Numadic/test-output/old/Default suite/methods.html
+++ b/Numadic/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc828d">  <td>23/08/28 16:21:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@740fb309]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@605052357</td>   <td></td> </tr>
-<tr bgcolor="bc828d">  <td>23/08/28 16:21:09</td>   <td>581</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@740fb309]">&lt;&lt;afterTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@605052357</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/04/24 22:58:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@53fe15ff]">&lt;&lt;afterMethodMethod</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/04/24 22:58:27</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@53fe15ff]">&lt;&lt;afterTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/04/24 22:58:26</td>   <td>-564</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@53fe15ff]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1835073088</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/04/24 22:58:27</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@53fe15ff]">careerPageScript</td> 
+  <td>main@1835073088</td>   <td></td> </tr>
 </table>
