--- a/Numadic/test-output/old/Regression_Suite/methods.html
+++ b/Numadic/test-output/old/Regression_Suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression_Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:44</td>   <td>31662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&lt;&lt;afterMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>23/12/15 17:18:34</td>   <td>21897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">careerPageScript</td> 
-  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="67eb8a">  <td>23/12/15 17:18:34</td>   <td>21897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">careerPageScript</td> 
-  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:44</td>   <td>32034</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&lt;&lt;afterTestMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:44</td>   <td>31662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&lt;&lt;afterMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:27</td>   <td>14289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&gt;&gt;beforeMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
-<tr bgcolor="858383">  <td>23/12/15 17:18:27</td>   <td>14289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@26d9b808]">&gt;&gt;beforeMethodMethod</td> 
-<td>&nbsp;</td>  <td>main@1497377679</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:08</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:37</td>   <td>28828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&lt;&lt;afterMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="63bcb1">  <td>24/04/24 23:57:32</td>   <td>24368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">careerPageScript</td> 
+  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:37</td>   <td>29136</td> <td>&nbsp;</td><td title="&lt;&lt;baseTest.afterTestMethod()[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&lt;&lt;afterTestMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:24</td>   <td>15998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&gt;&gt;beforeMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="63bcb1">  <td>24/04/24 23:57:32</td>   <td>24368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.careerPageScript()[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">careerPageScript</td> 
+  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:24</td>   <td>15998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseTest.beforeMethodMethod(java.lang.String)[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&gt;&gt;beforeMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
+<tr bgcolor="a970b0">  <td>24/04/24 23:57:37</td>   <td>28828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseTest.afterMethodMethod(org.testng.ITestResult)[pri:0, instance:com.numadic.QAtests.TestCase1@5a45133e]">&lt;&lt;afterMethodMethod</td> 
+<td>&nbsp;</td>  <td>main@1261031890</td>   <td></td> </tr>
 </table>
